--- a/PingPong.uproject
+++ b/PingPong.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.4",
+	"EngineAssociation": "{79088560-4297-A42F-CAF8-25904F998A14}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
